test/langtools/tools/javac/localmethods/NoAbstractLocalMethodTest.out
NoAbstractLocalMethodTest.java:10:18: compiler.err.expected3: class, interface, enum
1 error
